<resources>
    <string name="app_name">Swoosh</string>
    <string name="background_image">background Image</string>
    <string name="logo">logo</string>
    <string name="desired_league">Desired league</string>
    <string name="mens">Mens</string>
    <string name="womens">Womens</string>
    <string name="next">Next</string>
    <string name="mixed">mixed</string>
    <string name="go_all_in">GO ALL IN</string>
    <string name="on_going_all_out">ON GOING ALL OUT</string>
    <string name="find_a_team_in_your_city_and_dominate_the_league">Find a team in your city, and dominate the league
    </string>
    <string name="get_started">Get started</string>
    <string name="toggleButton">ToggleButton</string>
    <string name="begginner">Begginner</string>
    <string name="baller">Baller</string>
    <string name="button">Button</string>
    <string name="search_league">Looking for a mixed beginner league</string>
</resources>
