<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".LeagueActivity">

    <ImageView
            android:layout_width="0dp"
            android:layout_height="0dp" app:srcCompat="@drawable/desiredleaguebg"
            android:id="@+id/imageView3"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" android:scaleType="centerCrop"
            app:layout_constraintHorizontal_bias="0.0" app:layout_constraintVertical_bias="1.0"
            android:contentDescription="@string/background_image"/>
    <ImageView
            android:layout_width="88dp"
            android:layout_height="29dp" app:srcCompat="@drawable/swooshlogo"
            android:id="@+id/imageView4" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" android:layout_marginTop="24dp" app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
            android:contentDescription="@string/logo"/>
    <TextView
            android:text="@string/desired_league"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView4" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
            android:textColor="@color/colorAccent" android:textSize="18sp" android:layout_marginTop="41dp"
            app:layout_constraintTop_toBottomOf="@+id/imageView4"/>
    <LinearLayout
            android:orientation="vertical"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginTop="52dp"
            app:layout_constraintTop_toBottomOf="@+id/textView4" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="16dp" android:layout_marginStart="16dp">
        <ToggleButton
                android:text="@string/mens"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" tools:layout_editor_absoluteY="275dp"
                tools:layout_editor_absoluteX="163dp" android:id="@+id/toggleButton2" android:textOff="@string/mens"
                android:textOn="@string/mens" android:background="@drawable/swoosh_toggle"
                android:textColor="@color/colorAccent"/>
        <ToggleButton
                android:text="@string/womens"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:id="@+id/toggleButton" android:layout_marginTop="16dp"
                android:textOff="@string/womens" android:textOn="@string/womens" android:background="@drawable/swoosh_toggle"
                android:textColor="@color/colorAccent"/>
        <ToggleButton
                android:text="@string/mixed"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:id="@+id/toggleButton3" android:layout_marginTop="16dp"
                android:textOff="@string/mixed" android:textOn="@string/mixed" android:background="@drawable/swoosh_toggle"
                android:textColor="@color/colorAccent"/>
    </LinearLayout>
    <Button
            android:text="@string/next"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/button2" app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="16dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="16dp" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent" android:background="@drawable/swoosh_button"
            android:textColor="@color/colorAccent"/>
</android.support.constraint.ConstraintLayout>