<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".Controller.SkillActivity">
    <ImageView
            android:layout_width="0dp"
            android:layout_height="0dp" app:srcCompat="@drawable/beginnerballerbg"
            android:id="@+id/beginnerBallerBg"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" android:scaleType="centerCrop"
            app:layout_constraintHorizontal_bias="0.0" app:layout_constraintVertical_bias="0.0"
            android:contentDescription="@string/background_image"/>
    <ImageView
            android:layout_width="88dp"
            android:layout_height="29dp" app:srcCompat="@drawable/swooshlogo"
            android:id="@+id/imageView4" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" android:layout_marginTop="24dp" app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
            android:contentDescription="@string/logo"/>
    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="16dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="16dp"
            android:layout_marginTop="56dp" app:layout_constraintTop_toBottomOf="@+id/imageView4">
        <ToggleButton
                android:text="@string/toggleButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/beginnerLevelBtn" android:layout_weight="1"
                android:background="@drawable/swoosh_toggle" android:textColor="@color/colorAccent"
                android:textOn="@string/begginner" android:textOff="@string/begginner" tools:text="Begginner"
                android:layout_marginEnd="16dp" android:onClick="onBeginnerLevelClicked"/>
        <ToggleButton
                android:text="@string/toggleButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/ballerLevelBtn" android:layout_weight="1"
                android:background="@drawable/swoosh_toggle" android:textColor="@color/colorAccent"
                android:textOff="@string/baller" android:textOn="@string/baller" tools:text="Baller"
                android:layout_marginStart="16dp" android:onClick="onBallerLevelClicked"/>
    </LinearLayout>
    <Button
            android:text="@string/get_started"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/skillNextButton" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="16dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="16dp"
            app:layout_constraintBottom_toBottomOf="@+id/beginnerBallerBg" android:textColor="@color/colorAccent"
            android:background="@drawable/swoosh_button" android:onClick="onSkillGetStartedClicked"
            android:layout_marginBottom="16dp"/>

</android.support.constraint.ConstraintLayout>