<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".WelcomeActivity">

    <ImageView
            android:layout_width="0dp"
            android:layout_height="0dp" app:srcCompat="@drawable/welcomescreenbg"
            android:id="@+id/imageView"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:adjustViewBounds="false" android:scaleType="centerCrop"
            android:contentDescription="@string/background_image"/>
    <ImageView
            android:layout_width="88dp"
            android:layout_height="29dp" app:srcCompat="@drawable/swooshlogo"
            android:id="@+id/logo"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp" android:layout_marginTop="24dp"
            app:layout_constraintTop_toTopOf="@+id/imageView" android:contentDescription="@string/logo"/>
    <TextView
            android:text="@string/go_all_in"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView" android:textColor="@color/colorAccent"
            android:textSize="46sp" android:layout_marginTop="80dp"
            app:layout_constraintTop_toBottomOf="@+id/logo" android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintHorizontal_bias="0.503"/>
    <TextView
            android:text="@string/on_going_all_out"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView2" android:textColor="@color/colorAccent"
            android:textSize="22sp" android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/textView"
            android:layout_marginStart="8dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginEnd="8dp" app:layout_constraintEnd_toEndOf="parent" android:textStyle="bold"/>
    <TextView
            android:text="@string/find_a_team_in_your_city_and_dominate_the_league"
            android:layout_width="210dp"
            android:layout_height="42dp"
            android:id="@+id/textView3" android:textColor="@color/colorAccent"
            android:singleLine="false" android:textAlignment="center" android:layout_marginTop="32dp"
            app:layout_constraintTop_toBottomOf="@+id/textView2"
            app:layout_constraintStart_toStartOf="@+id/imageView" app:layout_constraintEnd_toEndOf="@+id/imageView"/>
    <Button
            android:text="@string/get_started"
            android:layout_width="0dp"
            android:layout_height="44dp"
            android:id="@+id/getStartedButton" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="@+id/imageView" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="16dp" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="16dp" android:textColor="@color/colorAccent"
            app:layout_constraintHorizontal_bias="0.0" android:background="@drawable/swoosh_button"/>

</android.support.constraint.ConstraintLayout>