<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent" xmlns:app="http://schemas.android.com/apk/res-auto"
        tools:context=".Controller.FinishActivity">

    <ImageView
            android:layout_width="0dp"
            android:layout_height="0dp" app:srcCompat="@drawable/exercisebg"
            android:id="@+id/imageView3"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" android:scaleType="centerCrop"
            app:layout_constraintHorizontal_bias="0.0" app:layout_constraintVertical_bias="1.0"
            android:contentDescription="@string/background_image"/>
    <ImageView
            android:layout_width="88dp"
            android:layout_height="29dp" app:srcCompat="@drawable/swooshlogo"
            android:id="@+id/imageView4" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" android:layout_marginTop="24dp" app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
            android:contentDescription="@string/logo"/>
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/searchLeaguesLbl" app:layout_constraintStart_toStartOf="@+id/imageView3"
            app:layout_constraintEnd_toEndOf="@+id/imageView3" android:layout_marginEnd="16dp"
            android:layout_marginBottom="8dp" app:layout_constraintBottom_toBottomOf="parent"
            android:textColor="@color/colorAccent"
            tools:text="@string/search_league"
            android:textSize="24sp" android:textAlignment="center" android:layout_marginStart="16dp"
            android:layout_marginTop="8dp" app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.39"/>
    <ProgressBar
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/progressBar" android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/searchLeaguesLbl" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"/>

</android.support.constraint.ConstraintLayout>